Fix event thumbnails @ high contrast

--- a/components/event/index.css
+++ b/components/event/index.css
@@ -52,7 +52,7 @@
 }
 
 .Event-details {
-  max-width: calc(100% - 10rem);
+  max-width: calc(100% - 11rem);
   position: absolute;
   right: 1.5rem;
   bottom: 1.6rem;
@@ -134,6 +134,7 @@
   transform: translate(5%, -15%);
 }
 
+.Event-figure::before,
 .Event-figure::after {
   content: "";
   position: absolute;
@@ -149,6 +150,22 @@
     rgba(0, 0, 0, 0.75) 100%
   );
   transition: background-image 180ms var(--ease-out);
+}
+
+.Event-figure::before {
+  height: 50%;
+  z-index: 1;
+  background: rgb(var(--default-color));
+  opacity: var(--high-contrast-on, 0);
+}
+
+.Event-meta {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .Event-image {
