--- a/components/symbol/index.css
+++ b/components/symbol/index.css
@@ -20,6 +20,7 @@
   position: absolute;
   left: 0;
   top: 0;
+  z-index: 1;
 }
 
 .Symbol--circle {
